try react-native-chart-kit

--- a/app.json
+++ b/app.json
@@ -1,6 +1,6 @@
 {
   "expo": {
-    "name": "be-ai-expo",
+    "name": "Be AI",
     "slug": "be-ai-expo",
     "version": "1.0.0",
     "orientation": "portrait",
