--- a/package.json
+++ b/package.json
@@ -17,14 +17,14 @@
   "dependencies": {
     "@expo/vector-icons": "^14.0.2",
     "@react-navigation/native": "^6.0.2",
-    "expo": "~51.0.26",
-    "expo-camera": "~15.0.14",
+    "expo": "51.0.31",
+    "expo-camera": "15.0.16",
     "expo-constants": "~16.0.2",
-    "expo-font": "~12.0.9",
+    "expo-font": "12.0.10",
     "expo-image-picker": "~15.0.7",
     "expo-linking": "~6.3.1",
     "expo-localization": "~15.0.3",
-    "expo-router": "~3.5.21",
+    "expo-router": "3.5.23",
     "expo-splash-screen": "~0.27.5",
     "expo-status-bar": "~1.12.1",
     "expo-system-ui": "~3.0.7",
@@ -48,7 +48,7 @@
     "@types/react": "~18.2.45",
     "@types/react-test-renderer": "^18.0.7",
     "jest": "^29.2.1",
-    "jest-expo": "~51.0.3",
+    "jest-expo": "~51.0.4",
     "react-test-renderer": "18.2.0",
     "typescript": "~5.3.3"
   },
